# web-rs

axum/: Cargo.toml
axum/assets/: config.json  index.html
axum/examples/: state.rs
axum/src/: bind.rs  extract.rs  main.rs  static_fs.rs  ws.rs
axum/src/tcp2ws/: api.rs  config.rs  mod.rs  route.rs  service.rs
rocket/: Cargo.toml  MyRocket.toml
rocket/src/: fs.rs  main.rs  my_type.rs  startup.rs
rocket/static/: index.html
