[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["net", "sync", "time"] }

[dependencies.rocket]
version = "0.5.0-rc.2"                    # Web framework for nightly with a focus on ease-of-use, expressibility, and speed. 
#features = ["json", "serde_json"]         # 仅支持夜间版本
